objects/ACCTFND__ACCTFNDFactorySettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Provides ability to specify custom implementations for use with Factory classes.</description>
    <fields>
        <fullName>ACCTFND__LoggingProvider__c</fullName>
        <description>The fully qualified name of the logging provider implementing the IACCTFNDLoggingProvider_v1 interface.</description>
        <label>Logging Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCTFND__ProviderEndpointNamedCred__c</fullName>
        <description>The named credential to use to communicate with to the provider endpoint.</description>
        <label>Provider Named Credential</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCTFND__ProviderEndpointOverride__c</fullName>
        <description>The endpoint to use for this provider. This will override whatever is set up in the plugin configuration page.</description>
        <label>Provider Endpoint Override</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ACCTFND__Provider__c</fullName>
        <description>The fully qualified name of the class implementing the IACCTFNDProvider_v2 interface.</description>
        <label>Funding Provider</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Account Funding Settings</label>
</CustomObject>